--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
 			<div id="logotipo"><img src="img/logo.png"></div>
 			<div id="slogan"><span>IG - Tecnologias e Práticas Web</span></div>
 		</div>
+		<!-- Aula dia 15-03-2023 -->
+		<div id="menu">
+			<!-- lista de elementos do menu -->
+			<ul>
+				<li><a href="html/paragrafo.html">Parágrafo, quebras e emojis</a></li>
+				<li><a href="html/cabecalhos.html">Cabeçalhos</a></li>
+				<li><a href="html/imagens.html">Imagens</a></li>
+				<li><a href="html/textos.html">Textos</a></li>
+				<li><a href="html/paragrafo.html">Parágrafo, quebras e emojis</a></li>
+
+			</ul>
+		</div>
 	</header>
 	<main></main>
 	<footer></footer>
