--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
 				<li><a href="html/cabecalhos.html">Cabeçalhos</a></li>
 				<li><a href="html/imagens.html">Imagens</a></li>
 				<li><a href="html/textos.html">Textos</a></li>
-				<li><a href="html/paragrafo.html">Parágrafo, quebras e emojis</a></li>
-
+				<li><a href="html/codigo.html">Código, citações e abreviaturas</a></li>
+				<li><a href="html/links.html">Links</a></li>
+				<li><a href="html/listas.html">Listas</a></li>
+				<li><a href="html/audio.html">Áudio e vídeos</a></li>
+				<li><a href="html/css.html">CSS inline, interno e externo</a></li>
 			</ul>
 		</div>
 	</header>
