--- a/html/imagens.html
+++ b/html/imagens.html
@@ -11,13 +11,19 @@
 <body>
 	<header>
 		<div id="cabecalho">
-			<div id="logotipo"><img src="img/logo.png"></div>
+			<div id="logotipo"><img src="../img/logo.png"></div>
 			<div id="slogan"><span>IG - Tecnologias e Práticas Web</span></div>
 		</div>
 		<a href="../index.html">Voltar à página principal</a>
 	</header>
 	<main>
-		
+		<h1>Inserção de imagens em HTML</h1>
+		<h2>Inserir imagem presente numa pasta dentro do prórpio site</h2>
+		<img src="../img/logo.png">
+		<h2>Inserir imagem a partir de url</h2>
+		<img src="https://www.islasantarem.pt/images/EDIFICIO21.png">
+		<h2>Imagem a partir do disco do pc</h2>
+		<img src="D:\logo.png">
 	</main>
 	<footer></footer>
 </body>
