--- a/html/cabecalhos.html
+++ b/html/cabecalhos.html
@@ -11,7 +11,7 @@
 <body>
 	<header>
 		<div id="cabecalho">
-			<div id="logotipo"><img src="img/logo.png"></div>
+			<div id="logotipo"><img src="../img/logo.png"></div>
 			<div id="slogan"><span>IG - Tecnologias e Práticas Web</span></div>
 		</div>
 		<a href="../index.html">Voltar à página principal</a>
