--- a/html/textos.html
+++ b/html/textos.html
@@ -20,10 +20,28 @@
 		<h1>Formatação de textos</h1>
 		<div id="texto">
 			<h2>Texto a negrito com a tag b</h2>
-			<p>Lorem ipsum dolor sit amet, <b>consectetuer adipiscing elit. Maecenas porttitor congue massa.</b> Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna. Nunc viverra imperdiet enim.</p>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna. Nunc viverra imperdiet enim.</p>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna. Nunc viverra imperdiet enim.</p>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna. Nunc viverra imperdiet enim.</p>
+			<p>Lorem ipsum dolor sit amet, <b>consectetuer adipiscing elit. Maecenas porttitor congue massa.</b></p>
+			
+			<h2>Utilizar a tag strong para dar destaque</h2>
+			<p>Lorem ipsum dolor sit amet, <strong>consectetuer adipiscing</strong> elit. Maecenas porttitor congue massa.</p>
+			
+			<h2>Criar texto em itálico com a tag i </h2>
+			<p><i>Lorem ipsum dolor sit amet</i>, consectetuer adipiscing elit.</p>
+
+			<h2>Criar uma ênfase utilizando a tag em</h2>
+			<p>Lorem ipsum dolor sit amet, <em>consectetuer adipiscing</em> elit. Maecenas porttitor congue massa. </p>
+
+			<h2>Criar um sublinhado</h2>
+			<p>Lorem ipsum dolor sit amet, <mark>consectetuer adipiscing</mark> elit. Maecenas porttitor congue massa.</p>
+
+			<h2>Criar um texto enorme com a tag big</h2>
+			<p>Lorem ipsum dolor sit amet, <big>consectetuer adipiscing</big> elit. Maecenas porttitor congue massa.</p>
+
+			<h2>Criar um texto pequeno com a tag small</h2>
+			<p>Lorem ipsum dolor sit amet, <small>consectetuer adipiscing</small> elit. Maecenas porttitor congue massa.</p>
+
+			<h2>Criar um texto rasurado com a tag del</h2>
+			<p>Lorem ipsum dolor sit amet, <del>consectetuer adipiscing</del> elit. Maecenas porttitor congue massa.</p>
 		</div>
 	</main>
 	<footer></footer>
