--- a/html/codigo.html
+++ b/html/codigo.html
@@ -11,13 +11,35 @@
 <body>
 	<header>
 		<div id="cabecalho">
-			<div id="logotipo"><img src="img/logo.png"></div>
+			<div id="logotipo"><img src="../img/logo.png"></div>
 			<div id="slogan"><span>IG - Tecnologias e Práticas Web</span></div>
 		</div>
 		<a href="../index.html">Voltar à página principal</a>
 	</header>
 	<main>
-		
+		<h1>Código citações e abreviaturas</h1>
+		<h2>Código</h2>
+			<code><pre>
+import numpy as np
+import math
+
+raio = 4
+areaCirculo = math.pi*raio*raio
+print("área do circulo:",areaCirculo)
+perimetroCirculo = 2*math.pi*raio
+print("períemtro do círculo:",perimetroCirculo)
+			</pre></code>
+	<h2>Citações</h2>	
+	<p>
+		Loucura de sonho naquele silêncio alheio!...
+A nossa vida era toda a vida... O nosso amor era o perfume
+do amor. . . Vivíamos horas impossíveis, cheias de sermos
+nós. . . E isto porque sabíamos, com toda a carne da nossa
+carne, que não éramos uma realidade. . .<cite>Pessoa, F. (1980). O eu profundo e os outros eus. Nova Fronteira.</cite>
+	</p>
+	<h2>Abreviaturas</h2>
+	<p>Hoje joga o Sporting Club de Portugal <abbr>SCP</abbr></p>
+
 	</main>
 	<footer></footer>
 </body>
