--- a/html/textos.html
+++ b/html/textos.html
@@ -42,6 +42,18 @@
 
 			<h2>Criar um texto rasurado com a tag del</h2>
 			<p>Lorem ipsum dolor sit amet, <del>consectetuer adipiscing</del> elit. Maecenas porttitor congue massa.</p>
+
+			<h2>Criar um texto inserido com a tag ins</h2>
+			<p>Lorem ipsum dolor sit amet, <ins>consectetuer adipiscing</ins> elit. Maecenas porttitor congue massa.</p>
+
+			<h2>Criar um texto sublinhado com a tag u</h2>
+			<p>Lorem ipsum dolor sit amet, <u>consectetuer adipiscing</u> elit. Maecenas porttitor congue massa.</p>
+
+			<h2>Criar um texto com valores na linha superior com a tag sup</h2>
+			<p>Área do círculo é dada pela fórmula PI*raio<sup>2</sup></p>
+
+			<h2>Criar um texto com valores na linha inferior com a tag sub</h2>
+			<p>Fórmula química da água é dada pela expressão: H<sub>2</sub>O</p>
 		</div>
 	</main>
 	<footer></footer>
