--- a/html/links.html
+++ b/html/links.html
@@ -9,15 +9,54 @@
 	<script type="text/javascript" src="../js/valida.js"></script>
 </head>
 <body>
-	<header>
+	<header id="topo">
 		<div id="cabecalho">
-			<div id="logotipo"><img src="img/logo.png"></div>
+			<div id="logotipo"><img src="../img/logo.png"></div>
 			<div id="slogan"><span>IG - Tecnologias e Práticas Web</span></div>
 		</div>
 		<a href="../index.html">Voltar à página principal</a>
 	</header>
 	<main>
-		
+		<h1 >Links</h1>
+		<h2>Links externos e a abrir numa nova aba do browser</h2>
+		Siga o site do ISLA <a href="https://www.islasantarem.pt/pt/" rel="external" target="_blank">aqui</a>
+
+		<h2>Links externos a abrir na aba atual do browser</h2>
+		Siga o site do ISLA <a href="https://www.islasantarem.pt/pt/" rel="external">aqui</a>
+
+		<h2>Links externos a abrir na aba atual do browser</h2>
+		Siga o site do ISLA <a href="https://www.islasantarem.pt/pt/" target="_self" rel="external">aqui</a>
+
+		<h2>Links externos e a abrir numa nova aba do browser</h2>
+		Siga o site do ISLA <a href="https://www.islasantarem.pt/pt/" rel="external" target="_blank">aqui</a>
+
+		<h2>Links externos a abrir na aba atual do browser</h2>
+		Siga o site do ISLA <a href="https://www.islasantarem.pt/pt/" rel="external">aqui</a>
+
+		<h2>Links externos a abrir na aba atual do browser</h2>
+		Siga o site do ISLA <a href="https://www.islasantarem.pt/pt/" target="_self" rel="external">aqui</a>
+
+		<h2>Links externos e a abrir numa nova aba do browser</h2>
+		Siga o site do ISLA <a href="https://www.islasantarem.pt/pt/" rel="external" target="_blank">aqui</a>
+
+		<h2>Links externos a abrir na aba atual do browser</h2>
+		Siga o site do ISLA <a href="https://www.islasantarem.pt/pt/" rel="external">aqui</a>
+
+		<h2>Links externos a abrir na aba atual do browser</h2>
+		Siga o site do ISLA <a href="https://www.islasantarem.pt/pt/" target="_self" rel="external">aqui</a>
+
+		<h2>Links externos e a abrir numa nova aba do browser</h2>
+		Siga o site do ISLA <a href="https://www.islasantarem.pt/pt/" rel="external" target="_blank">aqui</a>
+
+		<h2>Links externos a abrir na aba atual do browser</h2>
+		Siga o site do ISLA <a href="https://www.islasantarem.pt/pt/" rel="external">aqui</a>
+
+		<h2>Links externos a abrir na aba atual do browser</h2>
+		Siga o site do ISLA <a href="https://www.islasantarem.pt/pt/" target="_self" rel="external">aqui</a>
+
+		<h2>Link na própria página (âncora)</h2>
+		<a href="#topo">Topo</a>
+
 	</main>
 	<footer></footer>
 </body>
