--- a/html/listas.html
+++ b/html/listas.html
@@ -11,13 +11,100 @@
 <body>
 	<header>
 		<div id="cabecalho">
-			<div id="logotipo"><img src="img/logo.png"></div>
+			<div id="logotipo"><img src="../img/logo.png"></div>
 			<div id="slogan"><span>IG - Tecnologias e Práticas Web</span></div>
 		</div>
 		<a href="../index.html">Voltar à página principal</a>
 	</header>
 	<main>
-		
+		<h1>Listas</h1>
+		<h2>Lista ordenada</h2>
+		<ol>
+			<li>SL Benfica</li>
+			<li>FC Porto</li>
+			<li>SC Braga</li>
+			<li>SCP Sporting</li>
+		</ol>
+		<hr>
+		<h2>Lista ordenada letras minúsculas</h2>
+		<ol type="a">
+			<li>SL Benfica</li>
+			<li>FC Porto</li>
+			<li>SC Braga</li>
+			<li>SCP Sporting</li>
+		</ol>
+		<hr>
+		<h2>Lista ordenada letras maiúsculas</h2>
+		<ol type="A">
+			<li>SL Benfica</li>
+			<li>FC Porto</li>
+			<li>SC Braga</li>
+			<li>SCP Sporting</li>
+		</ol>
+		<hr>
+		<h2>Lista ordenada numeração romana minúsculas</h2>
+		<ol type="i">
+			<li>SL Benfica</li>
+			<li>FC Porto</li>
+			<li>SC Braga</li>
+			<li>SCP Sporting</li>
+		</ol>
+		<hr>
+		<h2>Lista ordenada numeração romana maiúsculas</h2>
+		<ol type="I">
+			<li>SL Benfica</li>
+			<li>FC Porto</li>
+			<li>SC Braga</li>
+			<li>SCP Sporting</li>
+		</ol>
+		<hr>
+		<h2>Lista ordenada numeração romana maiúsculas</h2>
+		<ol type="square">
+			<li>SL Benfica</li>
+			<li>FC Porto</li>
+			<li>SC Braga</li>
+			<li>SCP Sporting</li>
+		</ol>
+		<hr>
+		<h2>Lista ordenada numeração romana maiúsculas</h2>
+		<ol type="circle">
+			<li>SL Benfica</li>
+			<li>FC Porto</li>
+			<li>SC Braga</li>
+			<li>SCP Sporting</li>
+		</ol>
+		<hr>
+		<h2>Lista ordenada numeração romana maiúsculas</h2>
+		<ol type="A" start="5">
+			<li>SL Benfica</li>
+			<li>FC Porto</li>
+			<li>SC Braga</li>
+			<li>SCP Sporting</li>
+		</ol>
+		<hr>
+		<h2>Lista não ordenada</h2>
+		<ul >
+			<li>SL Benfica</li>
+			<li>FC Porto</li>
+			<li>SC Braga</li>
+			<li>SCP Sporting</li>
+		</ul>
+		<hr>
+		<h2>Lista não ordenada</h2>
+		<ul type="square">
+			<li>SL Benfica</li>
+			<li>FC Porto</li>
+			<li>SC Braga</li>
+			<li>SCP Sporting</li>
+		</ul>
+		<hr>
+		<h2>Lista não ordenada</h2>
+		<ul type="circle">
+			<li>SL Benfica</li>
+			<li>FC Porto</li>
+			<li>SC Braga</li>
+			<li>SCP Sporting</li>
+		</ul>
 	</main>
 	<footer></footer>
 </body>
