--- a/html/audio.html
+++ b/html/audio.html
@@ -11,13 +11,22 @@
 <body>
 	<header>
 		<div id="cabecalho">
-			<div id="logotipo"><img src="img/logo.png"></div>
+			<div id="logotipo"><img src="../img/logo.png"></div>
 			<div id="slogan"><span>IG - Tecnologias e Práticas Web</span></div>
 		</div>
 		<a href="../index.html">Voltar à página principal</a>
 	</header>
 	<main>
-		
+		<h1>Audio, vídeo e Mapas</h1>
+		<h2>Áudio</h2>
+		<audio preload="metadata" autoplay controls loop>
+        <source src="../som.mp3" type="audio/mp3"></audio>
+
+		<h2>Vídeo - incorporar diretamente do youtube</h2>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/79I89_9xYNw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+		<h2>Mapas - ISLA CAMPUS</h2>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d45341.37039621833!2d-8.703142894860049!3d39.235624164422795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd18ef82fad0760b%3A0xcf85696a1063989c!2sISLA%20Santar%C3%A9m%20-%20Instituto%20Superior%20de%20Gest%C3%A3o%20e%20Administra%C3%A7%C3%A3o!5e0!3m2!1spt-PT!2spt!4v1678999290176!5m2!1spt-PT!2spt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 	</main>
 	<footer></footer>
 </body>
